# pam8053

./: CMakeLists.txt  prj.conf
src/: main.c
src/azureConnection/: azureManager.c  azureManager.h  deviceReboot.c  deviceReboot.h  deviceSettings.c  deviceSettings.h  l4ConnectionManager.c  l4ConnectionManager.h  modemCommunicator.c  modemCommunicator.h  nrfProvisioningAzure.c  nrfProvisioningAzure.h  pam8053AzureDeviceTwin.c  pam8053AzureDeviceTwin.h
src/externalControl/: relayControl.c  relayControl.h
src/rs485/: codePanel.h  energyMeter.h  rs485Communication.h
src/test/: pam8053SelfTest.h
src/universalAlarmInput/: adcDts.c  adcDts.h  universalAlarmInput.c  universalAlarmInput.h
src/userInterface/: buttonModule.c  buttonModule.h  indicatorModule.c  indicatorModule.h
src/zigbee/: zigbeeManager.c  zigbeeManager.h
